--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
       href="https://fonts.googleapis.com/css2?family=Bowlby+One&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mali:wght@600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="scroll-container" id="app">
       <div
         id="nav"
-        class="z-50 flex flex-col left-0 bg-slate-600 w-32 h-full fixed bg-opacity-0 pl-1.5 justify-end gap-1.5 pl-3 pb-3 font-gloria"
+        class="z-50 flex flex-col left-0 bg-slate-600 w-32 h-full fixed bg-opacity-0 justify-end gap-1.5 pl-3 pb-3 font-gloria"
       >
         <a class="scale-up-anchor" id="sectionOneAnchor" href="#section-one"
           >Grattis!
@@ -48,7 +52,7 @@
         /></a>
         <h1 class="font-gloria text-8xl">YRGO</h1>
         <div
-          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
+          class="flex flex-col justify-center items-center h-2/3 w-2/3 relative"
         >
           <img
             src="/textblob/textblob_1.svg"
@@ -70,10 +74,10 @@
         id="section-two"
         class="scroll-area lg:h-screen bg-gradient-to-b from-orange-300 to-yellow-200 flex flex-row justify-center items-center"
       >
-        <img src="/blobs/blob_2.svg" class="h-2/4 w-2/5" alt="blob" />
+        <img src="/blobs/blob_2.svg" class="h-2/6 w-2/6" alt="blob" />
 
         <div
-          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
+          class="flex flex-col justify-center items-center h-3/5 w-4/5 relative"
         >
           <img
             src="/textblob/textblob_2.svg"
@@ -97,7 +101,7 @@
         class="scroll-area lg:h-screen bg-gradient-to-b from-yellow-200 to-green-100 flex justify-center items-center"
       >
         <div
-          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative ml-14"
+          class="flex flex-col justify-center items-center h-4/5 w-4/5 relative ml-14"
         >
           <img
             src="/textblob/textblob_1.svg"
@@ -117,16 +121,16 @@
             stolar, fåtöljer och saccosäckar.
           </p>
         </div>
-        <img src="/blobs/blob_3.svg" class="h-2/4 w-2/5" alt="blob" />
+        <img src="/blobs/blob_3.svg" class="h-2/5 w-1/6" alt="blob" />
       </section>
       <section
         id="section-four"
         class="scroll-area lg:h-screen bg-gradient-to-b from-green-100 to-green-200 flex justify-center items-center"
       >
-        <img src="/blobs/blob_5.svg" class="h-2/4 w-2/5" alt="blob" />
+        <img src="/blobs/blob_5.svg" class="h-2/5 w-1/6" alt="blob" />
 
         <div
-          class="flex flex-col justify-center items-center h-4/5 w-4/5 relative  text-left px-[10%]"
+          class="flex flex-col justify-center items-center h-4/5 w-4/5 relative text-left px-[16%]"
         >
           <img
             src="/textblob/textblob_7.svg"
@@ -137,29 +141,21 @@
           <p class="text-lg text-left z-10 font-mali">
             Själva urvalsprovet består av olika delar för att vi ska få en så
             bred bild av dina kunskaper som möjligt.
-          </p>
-
-          <p class="text-lg text-left z-10 font-mali">
-              Öppna frågor - du får reflektera och svara på en fråga med egna ord.
-          </p>
-
-          <p class="text-lg text-left z-10 font-mali">
+            <br />
+            <br />
+            Öppna frågor - du får reflektera och svara på en fråga med egna ord.
+            <br />
+            <br />
             Frågor om AI - AI är en del av branschens framtid.
-          </p>
-
-          <p class="text-lg text-left z-10 font-mali">
-            Matcha kod -
-            para ihop rätt kod med rätt resultat.
-          </p>
-
-          <p class="text-lg text-left z-10 font-mali">
-            Kod utan kod - vi vill se
-            att du kan beskriva korrekta processer.
-          </p> 
-          
-          <p class="text-lg text-left z-10 font-mali">Spelfrågor - berätta om
-            och diskutera olika spel Vid behov finns möjlighet att göra provet
-            muntligt eller i en enskild lokal. Kontakta oss för mer information.</p>
+            <br />
+            <br />
+            Matcha kod - para ihop rätt kod med rätt resultat. Kod utan kod - vi
+            vill se att du kan beskriva korrekta processer.
+            <br />
+            <br />
+            Spelfrågor - berätta om och diskutera olika spel Vid behov finns
+            möjlighet att göra provet muntligt eller i en enskild lokal.
+            Kontakta oss för mer information.
           </p>
         </div>
       </section>
@@ -188,7 +184,7 @@
         class="scroll-area lg:h-screen bg-gradient-to-b from-blue-200 to-indigo-200 flex align-center justify-center items-center"
       >
         <div
-          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
+          class="flex flex-col justify-center items-center h-4/5 w-4/5 relative"
         >
           <img
             src="/textblob/textblob_3.svg"
@@ -207,17 +203,15 @@
         </div>
         <img
           src="/blobs/blob_10.svg"
-          class="h-2/4 w-2/5 rotate-90"
+          class="h-2/5 w-2/6 rotate-90"
           alt="blob"
         />
       </section>
       <section
         id="section-seven"
-        class="scroll-area lg:h-screen bg-gradient-to-b from-indigo-200 to-purple-200 flex justify-center items-center"
+        class="scroll-area lg:h-screen bg-gradient-to-b from-indigo-200 to-purple-200 flex justify-center items-center text-left"
       >
-        <div
-          class="flex flex-col justify-center items-center h-full w-5/6 relative"
-        >
+        <div class="flex flex-col justify-center h-full w-5/6 relative pl-10">
           <img
             src="/textblob/textblob_6.svg"
             class="absolute z-0 h-full w-full"
@@ -226,41 +220,41 @@
           <h2 class="text-center z-10 relative text-3xl font-bowlby">
             För lärare
           </h2>
-          <h3 class="text-lg text-left px-44 z-10 font-mali">
+          <h3 class="text-lg px-44 z-10 font-mali font-bold">
             På vilket sätt är då detta en kostnadseffektiv lösning?
           </h3>
-          <p class="text-lg text-left px-44 z-10 font-mali">
+          <p class="text-lg px-44 z-10 font-mali">
             Automatiserad intervjuprocess - tack vare att den sökande själv
             spelar in svar på intervjufrågorna behöver mindre tid ägnas åt att
             hålla intervjuer
           </p>
-          <h3 class="text-lg text-left px-44 z-10 font-mali">
+          <h3 class="text-lg px-44 z-10 font-mali font-bold">
             Mångfacetterat urvalsprov
           </h3>
-          <p class="text-lg text-left px-44 z-10 font-mali">
+          <p class="text-lg px-44 z-10 font-mali">
             Förutom att provet gör det möjligt för fler att briljera i de olika
             delarna, består det även av frågor som inte kräver manuell rättning
             - win win!
           </p>
-          <h3 class="text-lg text-left px-44 z-10 font-mali">
+          <h3 class="text-lg px-44 z-10 font-mali font-bold">
             Allt på en plattform
           </h3>
-          <p class="text-lg text-left px-44 z-10 font-mali">
+          <p class="text-lg px-44 z-10 font-mali">
             Allt material från ansökan, prov och intervjuer samlas på en
             plattform. Mindre pappersarbete att hålla koll på, och mycket
             enklare att få en överblick.
           </p>
-          <h3 class="text-lg text-left px-44 z-10 font-mali">
+          <h3 class="text-lg px-44 z-10 font-mali font-bold">
             Reklam för YRGO
           </h3>
-          <p class="text-lg text-left px-44 z-10 font-mali">
+          <p class="text-lg px-44 z-10 font-mali">
             En ansökningsprocess som snarare kan beskrivas som en minnesvärd
             upplevelse är något man vill berätta om för nära och kära.
             Marknadsföring som sköter sig själv innebär mindre utgifter för
             YRGO.
           </p>
-          <h3 class="text-lg text-left px-44 z-10 font-mali">Tillgänglighet</h3>
-          <p class="text-lg text-left px-44 z-10 font-mali">
+          <h3 class="text-lg px-44 z-10 font-mali font-bold">Tillgänglighet</h3>
+          <p class="text-lg px-44 z-10 font-mali">
             Det är självklart att ansökningsprocessen ska vara tillgänglig för
             alla. Därför uppfyller ansökningsplattformen WCAG-riktlinjerna, och
             ansökande har alltid möjlighet att be om anpassningar, så som
