--- a/index.html
+++ b/index.html
@@ -149,8 +149,10 @@
             Frågor om AI - AI är en del av branschens framtid.
             <br />
             <br />
-            Matcha kod - para ihop rätt kod med rätt resultat. Kod utan kod - vi
-            vill se att du kan beskriva korrekta processer.
+            Matcha kod - para ihop rätt kod med rätt resultat.
+            <br />
+            <br />
+            Kod utan kod - vi vill se att du kan beskriva korrekta processer.
             <br />
             <br />
             Spelfrågor - berätta om och diskutera olika spel Vid behov finns
@@ -211,55 +213,51 @@
         id="section-seven"
         class="scroll-area lg:h-screen bg-gradient-to-b from-indigo-200 to-purple-200 flex justify-center items-center text-left"
       >
-        <div class="flex flex-col justify-center h-full w-5/6 relative pl-10">
+        <div class="flex flex-col justify-center h-full w-full relative">
           <img
             src="/textblob/textblob_6.svg"
             class="absolute z-0 h-full w-full"
             alt="blob"
           />
-          <h2 class="text-center z-10 relative text-3xl font-bowlby">
-            För lärare
-          </h2>
-          <h3 class="text-lg px-44 z-10 font-mali font-bold">
-            På vilket sätt är då detta en kostnadseffektiv lösning?
-          </h3>
-          <p class="text-lg px-44 z-10 font-mali">
-            Automatiserad intervjuprocess - tack vare att den sökande själv
-            spelar in svar på intervjufrågorna behöver mindre tid ägnas åt att
-            hålla intervjuer
-          </p>
-          <h3 class="text-lg px-44 z-10 font-mali font-bold">
-            Mångfacetterat urvalsprov
-          </h3>
-          <p class="text-lg px-44 z-10 font-mali">
-            Förutom att provet gör det möjligt för fler att briljera i de olika
-            delarna, består det även av frågor som inte kräver manuell rättning
-            - win win!
-          </p>
-          <h3 class="text-lg px-44 z-10 font-mali font-bold">
-            Allt på en plattform
-          </h3>
-          <p class="text-lg px-44 z-10 font-mali">
-            Allt material från ansökan, prov och intervjuer samlas på en
-            plattform. Mindre pappersarbete att hålla koll på, och mycket
-            enklare att få en överblick.
-          </p>
-          <h3 class="text-lg px-44 z-10 font-mali font-bold">
-            Reklam för YRGO
-          </h3>
-          <p class="text-lg px-44 z-10 font-mali">
-            En ansökningsprocess som snarare kan beskrivas som en minnesvärd
-            upplevelse är något man vill berätta om för nära och kära.
-            Marknadsföring som sköter sig själv innebär mindre utgifter för
-            YRGO.
-          </p>
-          <h3 class="text-lg px-44 z-10 font-mali font-bold">Tillgänglighet</h3>
-          <p class="text-lg px-44 z-10 font-mali">
-            Det är självklart att ansökningsprocessen ska vara tillgänglig för
-            alla. Därför uppfyller ansökningsplattformen WCAG-riktlinjerna, och
-            ansökande har alltid möjlighet att be om anpassningar, så som
-            muntliga prov, mer tid eller egen provsal.
-          </p>
+          <div class="z-10 px-[19%] text-lg font-mali">
+            <h2 class="text-center relative text-3xl font-bowlby">
+              För lärare
+            </h2>
+            <h3 class="font-bold">
+              På vilket sätt är då detta en kostnadseffektiv lösning?
+            </h3>
+            <p class="">
+              Automatiserad intervjuprocess - tack vare att den sökande själv
+              spelar in svar på intervjufrågorna behöver mindre tid ägnas åt att
+              hålla intervjuer
+            </p>
+            <h3 class="font-bold">Mångfacetterat urvalsprov</h3>
+            <p class="">
+              Förutom att provet gör det möjligt för fler att briljera i de
+              olika delarna, består det även av frågor som inte kräver manuell
+              rättning - win win!
+            </p>
+            <h3 class="font-bold">Allt på en plattform</h3>
+            <p class="">
+              Allt material från ansökan, prov och intervjuer samlas på en
+              plattform. Mindre pappersarbete att hålla koll på, och mycket
+              enklare att få en överblick.
+            </p>
+            <h3 class="font-bold">Reklam för YRGO</h3>
+            <p class="">
+              En ansökningsprocess som snarare kan beskrivas som en minnesvärd
+              upplevelse är något man vill berätta om för nära och kära.
+              Marknadsföring som sköter sig själv innebär mindre utgifter för
+              YRGO.
+            </p>
+            <h3 class="font-bold">Tillgänglighet</h3>
+            <p class="">
+              Det är självklart att ansökningsprocessen ska vara tillgänglig för
+              alla. Därför uppfyller ansökningsplattformen WCAG-riktlinjerna,
+              och ansökande har alltid möjlighet att be om anpassningar, så som
+              muntliga prov, mer tid eller egen provsal.
+            </p>
+          </div>
         </div>
       </section>
       <section
