efter provet text restored

--- a/index.html
+++ b/index.html
@@ -176,7 +176,11 @@
             alt="blob"
           />
           <h1 class="text-center z-10 relative text-3xl font-bowlby">Demo</h1>
-          <img class="h-48 z-50 rounded-md cursor-pointer pop-img" src="/public/images/Ex2.png" alt="">
+          <img
+            class="h-48 z-50 rounded-md cursor-pointer pop-img"
+            src="/public/images/Ex2.png"
+            alt=""
+          />
         </div>
       </section>
       <section
@@ -194,6 +198,12 @@
           <h1 class="text-center z-10 relative text-3xl font-bowlby">
             Efter provet
           </h1>
+          <p class="text-lg text-left px-28 z-10 font-mali">
+            Vill du fika, diskutera svar eller snacka spel? Du är varmt
+            välkommen att träffa våra elever på lite häng. Det är ett suveränt
+            tillfälle att networka med framtida branschkollegor! Ryktet säger
+            att urvalsprovs-ölen på kvällen är tradition.
+          </p>
         </div>
         <img
           src="/blobs/blob_10.svg"
