--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -165,22 +165,24 @@
         id="section-five"
         class="scroll-area lg:h-screen bg-gradient-to-b from-green-200 to-blue-200 flex justify-center items-center"
       >
-        <img src="/blobs/blob_5.svg" class="h-2/4 w-2/5" alt="blob" />
-
         <div
-          class="flex flex-col justify-center items-center h-3/5 w-3/5 relative"
+          class="flex flex-col justify-center items-center h-4/5 w-4/5 relative"
         >
-          <img
-            src="/textblob/textblob_2.svg"
-            class="absolute z-0 h-full w-full rotate-180"
-            alt="blob"
-          />
           <h1 class="text-center z-10 relative text-3xl font-bowlby">Demo</h1>
-          <img
-            class="h-48 z-50 rounded-md cursor-pointer pop-img"
-            src="/public/images/Ex2.png"
-            alt=""
-          />
+          <div class="flex-start w-full mb-4">
+            <img
+              class="h-48 z-50 rounded-md cursor-pointer pop-img"
+              src="/public/images/Ex2.png"
+              alt=""
+            />
+          </div>
+          <div class="flex-start w-full">
+            <img
+              class="h-48 z-50 rounded-md cursor-pointer pop-img"
+              src="/public/images/Ex2.png"
+              alt=""
+            />
+          </div>
         </div>
       </section>
       <section
