--- a/index.html
+++ b/index.html
@@ -140,24 +140,22 @@
           <h1 class="text-center z-10 relative text-3xl font-bowlby">Provet</h1>
           <p class="text-lg text-left z-10 font-mali">
             Själva urvalsprovet består av olika delar för att vi ska få en så
-            bred bild av dina kunskaper som möjligt.
+            bred bild av dina kunskaper som möjligt. Vid behov finns möjlighet
+            att göra provet muntligt eller i en enskild lokal. Kontakta oss för
+            mer information.
             <br />
             <br />
-            Öppna frågor - du får reflektera och svara på en fråga med egna ord.
+            Öppna frågor - du får reflektera och svara på frågor med egna ord.
+            Ex: Vad är en Array?
             <br />
             <br />
-            Frågor om AI - AI är en del av branschens framtid.
+            Frågor om AI - AI är en del av branschens framtid och vi vill gärna
+            se att du kan skriva effektiva prompts. Ex: Du håller på att skapa
+            ett Pacman-liknande spel i C#. Hur skulle du fråga en textbaserad AI
+            för att få hjälp med att kunna äta spökena utan att nämna Pacman?
             <br />
             <br />
-            Matcha kod - para ihop rätt kod med rätt resultat.
-            <br />
-            <br />
-            Kod utan kod - vi vill se att du kan beskriva korrekta processer.
-            <br />
-            <br />
-            Spelfrågor - berätta om och diskutera olika spel Vid behov finns
-            möjlighet att göra provet muntligt eller i en enskild lokal.
-            Kontakta oss för mer information.
+            Spelfrågor - berätta om och diskutera olika spel
           </p>
         </div>
       </section>
@@ -223,7 +221,7 @@
             class="absolute z-0 h-full w-full"
             alt="blob"
           />
-          <div class="z-10 px-[19%] text-lg font-mali">
+          <div class="z-10 pl-[16%] pr-[20%] text-lg font-mali">
             <h2 class="text-center relative text-3xl font-bowlby">
               För lärare
             </h2>
