textblob 1 for demo

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -167,11 +167,13 @@
           id="first-row-example"
           class="flex flex-row justify-around w-full h-1/2 items-center"
         >
-          <div
-            id="game-example"
-            class="flex flex-col bg-slate-700 justify-center"
-          >
-            <div>
+          <div id="game-example" class="flex flex-col justify-center relative">
+            <img
+              src="/textblob/textblob_demo2.svg"
+              class="h-full w-full z-0 absolute"
+              alt="blob"
+            />
+            <div class="z-10">
               <h2>Para ihop rätt kod exempel med spelets</h2>
               <video
                 controls
@@ -182,17 +184,17 @@
             </div>
             <div class="flex flex-row justify-between mt-6">
               <img
-                class="h-28 z-50 rounded-md cursor-pointer pop-img"
+                class="h-28 z-10 rounded-md cursor-pointer pop-img"
                 src="/public/images/Ex2.png"
                 alt=""
               />
               <img
-                class="h-28 z-50 rounded-md cursor-pointer pop-img"
+                class="h-28 z-10 rounded-md cursor-pointer pop-img"
                 src="/public/images/Ex2.png"
                 alt=""
               />
               <img
-                class="h-28 z-50 rounded-md cursor-pointer pop-img"
+                class="h-28 z-10 rounded-md cursor-pointer pop-img"
                 src="/public/images/Ex2.png"
                 alt=""
               />
