--- a/index.html
+++ b/index.html
@@ -161,18 +161,18 @@
       </section>
       <section
         id="section-five"
-        class="scroll-area lg:h-screen bg-gradient-to-b from-green-200 to-blue-200 flex justify-center items-center font-mali text-lg flex-row"
+        class="scroll-area lg:h-screen bg-gradient-to-b from-green-200 to-blue-200 font-mali text-lg grid grid-cols-2 justify-center items-center"
       >
         <div
           id="game-example"
-          class="flex flex-col justify-center items-center relative h-3/5 w-3/5 z-10"
+          class="flex flex-col justify-center items-center relative h-full w-full z-10"
         >
           <img
             src="/textblob/textblob_demo2.svg"
             class="h-full w-full z-0 absolute"
             alt="blob"
           />
-          <h2 class="z-10">Para ihop rätt kod exempel</h2>
+          <h2 class="z-10 font-bold">Para ihop rätt kod exempel</h2>
           <video
             controls
             autoplay
@@ -200,14 +200,14 @@
 
         <div
           id="wrong-code-example"
-          class="flex flex-col justify-center h-2/5 w-2/5 relative align-center items-center"
+          class="flex flex-col justify-center h-3/4 w-3/4 relative align-center items-center"
         >
           <img
             src="/textblob/textblob_demo1.svg"
             class="h-full w-full z-0 absolute rotate-180"
             alt="blob"
           />
-          <h2 class="z-10">Hitta felet i koden</h2>
+          <h2 class="z-10 font-bold">Hitta felet i koden</h2>
           <img
             class="h-44 w-32 z-10 rounded-md cursor-pointer pop-img border-2 border-black"
             src="/public/images/Ex2.png"
@@ -216,27 +216,27 @@
         </div>
         <div
           id="open-question"
-          class="flex flex-col justify-center h-2/5 w-2/5 relative align-center items-center"
+          class="flex flex-col justify-center h-3/5 w-3/5 relative align-center items-center place-self-center"
         >
           <img
             src="/textblob/textblob_demo3.svg"
             class="h-full w-full z-0 absolute"
             alt="blob"
           />
-          <h2 class="z-10">Beskriv med egna ord</h2>
+          <h2 class="z-10 font-bold">Beskriv med egna ord</h2>
           <p class="z-10">Vad är en array?</p>
         </div>
         <div
           id="ai-question"
-          class="flex flex-col justify-center h-3/5 w-3/5 relative align-center items-center"
+          class="flex flex-col justify-center h-full w-full relative align-center items-center"
         >
           <img
-            src="/textblob/textblob_demo4.svg"
+            src="/textblob/textblob_6.svg"
             class="h-full w-full z-0 absolute"
             alt="blob"
           />
-          <h2 class="z-10">AI fråga</h2>
-          <p class="z-10">
+          <h2 class="z-10 font-bold">AI fråga</h2>
+          <p class="z-10 px-[30%]">
             Du håller på att skapa ett Pacman-liknande spel i C#. Hur skulle du
             fråga en textbaserad AI för att få hjälp med att kunna äta spökena
             utan att nämna Pacman?
