--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -165,7 +165,7 @@
       >
         <div
           id="game-example"
-          class="flex flex-col justify-center items-center relative h-full w-full z-10"
+          class="flex flex-col justify-center items-center relative h-full w-full z-10 mt-3"
         >
           <img
             src="/textblob/textblob_demo2.svg"
@@ -228,7 +228,7 @@
         </div>
         <div
           id="ai-question"
-          class="flex flex-col justify-center h-full w-full relative align-center items-center"
+          class="flex flex-col justify-center h-full w-full relative align-center items-center mb-3"
         >
           <img
             src="/textblob/textblob_6.svg"
@@ -236,7 +236,7 @@
             alt="blob"
           />
           <h2 class="z-10 font-bold">AI fråga</h2>
-          <p class="z-10 px-[30%]">
+          <p class="z-10 px-[22%]">
             Du håller på att skapa ett Pacman-liknande spel i C#. Hur skulle du
             fråga en textbaserad AI för att få hjälp med att kunna äta spökena
             utan att nämna Pacman?
