removed some text that was not supposed to be in it

--- a/index.html
+++ b/index.html
@@ -146,16 +146,14 @@
             <br />
             <br />
             Öppna frågor - du får reflektera och svara på frågor med egna ord.
-            Ex: Vad är en Array?
             <br />
             <br />
             Frågor om AI - AI är en del av branschens framtid och vi vill gärna
-            se att du kan skriva effektiva prompts. Ex: Du håller på att skapa
-            ett Pacman-liknande spel i C#. Hur skulle du fråga en textbaserad AI
-            för att få hjälp med att kunna äta spökena utan att nämna Pacman?
+            se att du kan skriva effektiva prompts.
             <br />
             <br />
-            Spelfrågor - berätta om och diskutera olika spel
+            Kod utan kod - vi vill se att du kan beskriva korrekta processer med
+            egna ord.
           </p>
         </div>
       </section>
