--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -33,7 +33,7 @@
           >Grattis!
         </a>
         <a id="sectionTwoAnchor" href="#section-two">Intervju</a>
-        <a id="sectionThreeAnchor" href="#section-three">Urvalsprov</a>
+        <a id="sectionThreeAnchor" href="#section-three">Plats</a>
         <a id="sectionFourAnchor" href="#section-four">Provet</a>
         <a id="sectionFiveAnchor" href="#section-five">Demo</a>
         <a id="sectionSixAnchor" href="#section-six">Efter provet</a>
